# OnlineStore

./: .gitignore  README.md  Задание магазин.docx  схемы магазина.drawio
OnlineStoreClient/: CMakeLists.txt  adminwindow.cpp  adminwindow.h  adminwindow.ui  cartwindow.cpp  cartwindow.h  cartwindow.ui  customerwindow.cpp  customerwindow.h  customerwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  networkmanager.cpp  networkmanager.h  productcard.cpp  productcard.h  productcard.ui  productcardinadminpanel.cpp  productcardinadminpanel.h  productcardinadminpanel.ui  productcardincart.cpp  productcardincart.h  productcardincart.ui
OnlineStoreServer/: CMakeLists.txt  databasehandler.cpp  databasehandler.h  httpserver.cpp  httpserver.h  main.cpp
Queries/: CreateFunctionsAndProcedures.sql  CreateTables.sql  CreateView.sql  InitialFilling.sql
